--- a/Left.xaml
+++ b/Left.xaml
@@ -7,6 +7,21 @@
         mc:Ignorable="d"
         Title="Left" Height="450" Width="800">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Button Content="Вычислить производную" 
+                Command="{Binding CalculateCommand}"
+                HorizontalAlignment="Left"
+                Margin="0,10"/>
+
+        <DataGrid Grid.Row="1" ItemsSource="{Binding Results}" AutoGenerateColumns="True" Margin="0,10">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="X" Binding="{Binding X}" />
+                <DataGridTextColumn Header="Производная" Binding="{Binding Derivative}" />
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </Window>
