--- a/Runge.xaml
+++ b/Runge.xaml
@@ -16,30 +16,34 @@
 
         <!-- Ввод точек -->
         <GroupBox Grid.Row="0" Header="Введите точки функции (x y), по одной на строку" Margin="0,5">
-            <TextBox x:Name="txtInputPoints"
-         AcceptsReturn="True"
-         VerticalScrollBarVisibility="Auto"
-         Height="120"
-         TextWrapping="Wrap"
-         ToolTip="Формат:\nкаждая пара на новой строке\nпример:\n0.8 0.512\n0.9 0.729\n1.0 1.000"/>
+            <StackPanel>
+                <TextBox x:Name="txtInputPoints"
+                 AcceptsReturn="True"
+                 VerticalScrollBarVisibility="Auto"
+                 Height="120"
+                 TextWrapping="Wrap"
+                 ToolTip="Формат:\nкаждая пара на новой строке\nпример:\n0.8 0.512\n0.9 0.729\n1.0 1.000"/>
+
+                <Button Content="Добавить точки" Click="AddPoints_Click" Width="120" HorizontalAlignment="Left" Margin="0,5,0,0"/>
+            </StackPanel>
         </GroupBox>
 
         <!-- Настройки метода -->
         <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="50,0,64,10">
             <TextBlock Text="x для производной:" VerticalAlignment="Center" Margin="0,5"/>
-            <TextBox x:Name="txtXTarget" Width="80" Text="1.0" 
+            <TextBox x:Name="txtXTarget" Width="80" Text="1.0"
                      TextChanged="OnNumericTextBox_TextChanged" Margin="0,5"/>
 
             <TextBlock Text="Шаг h:" VerticalAlignment="Center" Margin="20,5"/>
-            <TextBox x:Name="txtH" Width="80" Text="0.1" 
+            <TextBox x:Name="txtH" Width="80" Text="0.1"
                       TextChanged="OnNumericTextBox_TextChanged" Margin="0,5"/>
 
             <TextBlock Text="Множитель k:" VerticalAlignment="Center" Margin="20,5"/>
-            <TextBox x:Name="txtK" Width="60" Text="2" 
+            <TextBox x:Name="txtK" Width="60" Text="2"
                       TextChanged="OnNumericTextBox_TextChanged" Margin="0,5"/>
 
             <TextBlock Text="Порядок p:" VerticalAlignment="Center" Margin="20,5"/>
-            <TextBox x:Name="txtP" Width="60" Text="1" 
+            <TextBox x:Name="txtP" Width="60" Text="1"
                       TextChanged="OnNumericTextBox_TextChanged" Margin="0,5"/>
 
             <Button Content="Рассчитать производную" Click="CalculateDerivative_Click" Width="160" Margin="20,5"/>
@@ -58,8 +62,8 @@
             <TextBlock x:Name="txtResult"
                        FontSize="14"
                        Padding="5"
-                       Text="Здесь будет результат после расчёта" Height="395"/>
+                       Text="Здесь будет результат после расчёта"
+                       Height="395"/>
         </GroupBox>
-
     </Grid>
 </Window>
